# ga_pipeline

./: .gitattributes  .gitignore  README.md  SConstruct  setup.cfg  setup.py
configs/envs/: example
configs/gapipe/S25A_April2026/: b.py  b_mr_phx.py  common.py  common.sh  crosscalib.py  mr.py
configs/gapipe/S25A_April2026/garuns/: MW_outerdisk.sh  crosscalib.sh  (+4 more)
configs/gapipe/S25A_November2025/: b_mr.py  common.py  common.sh  single.py  single_mr.py
configs/gapipe/run21_June2025/: single.py
configs/gapipe/run22_July2025/: single.py
configs/gapipe/run23_August2025/: single.py
configs/gapipe/run24_November2025/: common.py  common.sh  m31.py  single.py
data/test/: config_01.json  config_01.py  config_01.yaml  pfsGAObject.yaml  pfsStar.yaml
docs/: 0_introduction.md  1_installation.md  2_data.md  2_development.md  3_config.md  3_run.md  4_batch.md  4_development.md  4_execute.md  5_development.md  5_reference.md  6_reference.md
nb/: fits.ipynb  pfsStar.ipynb  pfsStarCatalog.ipynb  run.ipynb
recipe/: conda_build_config.yaml  meta.yaml
scripts/: batch.sh  catalog.sh  download.sh  run.sh  upload.sh
setup/: README.md  gapipe.yaml  install.sh  lsst.yaml  lsstinstall.patch
tests/pipeline/: test_ga1dpipeline.py  test_pipeline.py
tests/pipeline/common/: test_config.py
tests/pipeline/config/: configs.py  test_config.py  test_ga1dpipelineconfig.py
tests/pipeline/data/: test_datefilter.py  test_filesystemconnector.py  test_intfilter.py  test_searchfilter.py
tests/pipeline/discovery/: test_filesystemdiscovery.py
tests/pipeline/gapipe/: test_gapipeline.py
tests/pipeline/util/: test_datefilter.py  test_idfilter.py  test_intidfilter.py  test_timer.py
(+119 files in other folders)
