[metadata]
name = pfsgapipe
version = 0.1.1
license = NO LICENSE, DO NOT DISTRIBUTE
description = Subaru PFS GA pipeline
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    astronomy
url = https://github.com/Subaru-PFS-GA/ga_pipeline
author = Laszlo Dobos
author_email = dobos@jhu.edu
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: Other/Proprietary License

license_files =
    README.md

[options]
package_dir =
    =python
packages = find_namespace:
include_package_data = false
zip_safe = false
setup_requires = setuptools_scm[toml] >= 4
python_requires = >=3.10
install_requires =
    python >=3.10
    tqdm >=4
    numpy >=1.24
    pandas >=1.5
    h5py >=3.8
    matplotlib >=3.7
    scipy >=1.10
    pyyaml >=6.0


[options.packages.find]
where = python
exclude =
    test*
    pfs
    pfs/ga


[options.entry_points]
console_scripts =
    pfsgapipe-configure = pfs.ga.pipeline.scripts.configure:main
    pfsgapipe-run = pfs.ga.pipeline.scripts.run:main


[flake8]
max-line-length = 110
ignore = E133, E226, E228, E266, N802, N803, N806, N812, N813, N815, N816, W504
exclude =
    __init__.py
    python/test

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W504
    data/test
